force-app/main/default/objects/Offer_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Avenu_Monash_Online_Template_Id__c</fullName>
        <description>Conga Template ID for Avenu - Monash Online</description>
        <label>Avenu Monash Online Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Base_Return_URL__c</fullName>
        <description>The base URL for when DocuSign completes the embedded process and redirects the user back</description>
        <inlineHelpText>This should not end with &quot;/&quot;.
An example of this value &quot;
https://sfcpq2dev-monashpartner.cs152.force.com&quot;</inlineHelpText>
        <label>DocuSign Base Return URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DocuSign_Brand_Id__c</fullName>
        <label>DocuSign Brand Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Return_URL_Path__c</fullName>
        <description>The path of the DocuSign return URL. This should be used with the DocuSign Base Return URL to form the complete URL for the redirection of the user. Should not start with &quot;/&quot;.</description>
        <inlineHelpText>Should not start with &quot;/&quot;</inlineHelpText>
        <label>DocuSign Return URL Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_ID_Email_Footer__c</fullName>
        <label>Document ID Email Footer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_ID_Email_Header__c</fullName>
        <label>Document ID Email Header</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_ID_Email_Logo__c</fullName>
        <label>Document ID Email Logo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Server__c</fullName>
        <label>Document Server Instance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Template_Id__c</fullName>
        <label>Domestic Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Specialist_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the specialist review functionality for offers when a product, course fee and/or clause has been identified as something that could be reviewed by a CPQ admin before allowing the assessor to publish the offer. When this value is unchecked, opportunities generated for Offers will allow the assessor to publish the offer without further review from a CPQ Admin, regardless of whether a potential review for course fee, product and/or clause has been identified.</description>
        <label>Enable Specialist Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCO_Ex_SEM1_Lapse_Date__c</fullName>
        <description>Holds SEM1 Exception lapse date</description>
        <label>GCO Ex  SEM1 Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_Ex_SEM2_Lapse_Date__c</fullName>
        <description>Field to capture Exception lapse date for SEM2 GCO Intake period</description>
        <label>GCO Ex SEM2 Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_Ex_Spring_Lapse_Date__c</fullName>
        <description>Field to capture Exception lapse date for Spring GCO Intake period</description>
        <label>GCO Ex Spring Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_Ex_Summer_Lapse_Date__c</fullName>
        <description>Field to capture Exception lapse date for Summer GCO Intake period</description>
        <label>GCO Ex Summer Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_Ex_Winter_Lapse_Date__c</fullName>
        <description>Field to capture Exception lapse date for Winter GCO Intake period</description>
        <label>GCO Ex Winter Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_SEM1_Add_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to add year to the Exception Summer lapse date to match against Intake period year</description>
        <label>GCO SEM1 Add  Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCO_SEM1_Lapse_Date__c</fullName>
        <description>Field to capture default lapse date for SEM1 GCO Intake period</description>
        <label>GCO SEM1 Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_SEM2_Lapse_Date__c</fullName>
        <description>Field to capture default lapse date for SEM2 GCO Intake period</description>
        <label>GCO SEM2 Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_Spring_Lapse_Date__c</fullName>
        <description>Field to capture default lapse date for Spring GCO Intake period</description>
        <label>GCO Spring Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_Summer_Add_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to add year to the Exception Summer lapse date to match against Intake period year</description>
        <label>GCO Summer Add Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCO_Summer_Lapse_Date__c</fullName>
        <description>Field to capture default lapse date for Summer GCO Intake period</description>
        <label>GCO Summer Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_Template_Id__c</fullName>
        <description>Holds GCO Conga Template Id</description>
        <label>GCO Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCO_Winter_Lapse_Date__c</fullName>
        <description>Field to capture Offer lapse date for Winter GCO Intake period</description>
        <label>GCO Winter Lapse Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Sign_Contact_Us_Email_Address__c</fullName>
        <label>Guardian Sign Contact Us Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_SHADOW_PHASE__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When &quot;in shadow phase&quot; quotes cannot be published to the community portal. Validation rule on quote object references this field</description>
        <inlineHelpText>When &quot;in shadow phase&quot; quotes cannot be published to the community portal. Validation rule on quote object references this field</inlineHelpText>
        <label>IS_SHADOW_PHASE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indonesia_ENG_Template_Id__c</fullName>
        <description>Conga Template ID for Indonesia english version</description>
        <label>Indonesia ENG TemplateId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isca_Template_Id__c</fullName>
        <label>Isca Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isca_Template_Query1__c</fullName>
        <label>Isca Template Query1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isca_Template_Query2__c</fullName>
        <label>Isca Template Query2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isca_Template_Query_Final__c</fullName>
        <label>Isca Template Query Final</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isca_Template_Query_Preview__c</fullName>
        <label>Isca Template Query Preview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Unit_s_for_MA_Applications__c</fullName>
        <description>Maximum number of unit preferences allowed for Monash Abroad applications</description>
        <inlineHelpText>Maximum number of unit preferences allowed for Monash Abroad applications</inlineHelpText>
        <label>Maximum Unit(s) for MA Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Unit_s_for_Online_Applications__c</fullName>
        <description>Maximum number of Unit preferences allowed for Online Applications</description>
        <inlineHelpText>Maximum number of Unit preferences allowed for Online Applications</inlineHelpText>
        <label>Maximum Unit(s) for Online Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Unit_s_for_MA_Applications__c</fullName>
        <description>Minimum number of unit preferences allowed for Monash Abroad applications</description>
        <inlineHelpText>Minimum number of unit preferences allowed for Monash Abroad applications</inlineHelpText>
        <label>Minimum Unit(s) for MA Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Unit_s_for_Online_Applications__c</fullName>
        <description>Minimum number of Unit preferences allowed for Online Applications</description>
        <inlineHelpText>Minimum number of Unit preferences allowed for Online Applications</inlineHelpText>
        <label>Minimum Unit(s) for Online Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monash_Abroad_Template_Id__c</fullName>
        <description>Conga Template ID for Study Abroad and Exchange Applications</description>
        <label>Monash Abroad Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Offer Setting</label>
</CustomObject>